--- a/tests/complex/test2.html
+++ b/tests/complex/test2.html
@@ -35,4 +35,7 @@ int not_main (void) {
     }
     return 0;
 }
-<font color = "blue">Total number of violations found = 6</font></p></pre></body></html>
+<font color = "blue">Total number of violations found = 6</font><font color = "blue">Spec 10 failed: 1
+</font><font color = "blue">Spec 11 failed: 2
+</font><font color = "blue">Spec 20 failed: 3
+</font></p></pre></body></html>
